[package]
name = "locality"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = []
std = []

[dependencies]

[target.cfg('loom').dependencies]
loom = "0.3"